# auto_web_maps

./: README.md  pyproject.toml
data/strms/: 12090105_HU8.parquet  12090205_HU8.parquet
data/ws/: Austin-Travis Lakes_12090205.parquet  Concho_12090105.parquet  Middle Guadalupe_12100202.parquet  Upper Devils_13040301.parquet  Upper Pecos-Black_13060011.parquet
notebook/: WebMaps_Folium_Parquet.ipynb
