[tool.poetry]
name = "new3119setup"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
lonboard = "^0.9.2"
pandas = "^2.2.2"
geopandas = "^0.14.4"
pyarrow = "^16.1.0"
parquet = "^1.3.1"
geoparquet = "^0.0.3"
geoarrow-pyarrow = "^0.1.2"
geoarrow-pandas = "^0.1.1"
seaborn = "^0.13.2"
plotly = "^5.22.0"
geoviews = "^1.12.0"
holoviews = "^1.18.3"
bokeh = "^3.4.1"
datashader = "^0.16.1"
dask = "^2024.5.1"
dask-expr = "^1.1.1"
folium = "^0.16.0"
osmium = "^3.7.0"
pyrosm = "^0.6.2"
osmnx = "^1.9.3"
mapclassify = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
